Here are the changes from version 20070826 to version YYYYMMDD.

* 2007-11-07
   - Added %posint command to ml-lex, to set the yypos type and allow
     the lexing of multi-gigabyte input files.  Thanks to Florian
     Weimer for the feature concept and original patch.


* 2007-11-07
   - Added command-line switch -mlb-path-var '<name> <value>' for
     specifying MLB path variables.

* 2007-09-20
   - Fixed bug in elaboration of structures with signature
     constraints.  This would later cause the compiler to raise the
     TypeError exception.  Thanks to Vesa Karvonen for the bug report.

* 2007-09-11
   - Fixed bug in interaction of _export-ed functions and signal
     handlers.  Thanks to Sean McLaughlin for the bug report.

* 2007-09-03
   - Fixed bug in implementation of _export of functions using 'char'
     type.  Thanks to Katsuhiro Ueno for the bug report.

--------------------------------------------------------------------------------

Here are the changes from version 20051202 to version 20070826.

Summary:
  + New platforms:
   o amd64-linux, amd64-freebsd
   o hppa-hpux
   o powerpc-aix
   o x86-darwin (Mac OS X)
  + Compiler.
   o Support for 64-bit platforms.
    * Native amd64 codegen.
   o Command-line switches.
    * Added: -codegen amd64, -codegen x86, -default-type <type>,
        -profile-val {false|true}.
    * Changed: -stop f (file listing now includes .mlb files)
   o Bytecode codegen.
    * Support for profiling.
    * Support for exception history.
  + Language.
   o ML Basis annotations.
    * Removed: allowExport, allowImport, sequenceUnit, warnMatch.
  + Libraries.
   o Basis Library.
    * Added: PackWord16Big, PackWord16Little, PackWord64Big,
	PackWord64Little.
    * Bug Fixes: see changelog.
   o MLton structure.
    * Added: MLTON_MONO_ARRAY, MLTON_MONO_VECTOR, MLTON_REAL, 
        MLton.BinIO.tempPrefix, MLton.CharArray, MLton.CharVector,
        MLton.IntInf.BigWord, MLton.IntInf.SmallInt,