@@ -1,4 +1,4 @@
-/* Copyright (C) 1999-2005 Henry Cejtin, Matthew Fluet, Suresh
+/* Copyright (C) 1999-2007 Henry Cejtin, Matthew Fluet, Suresh
  *    Jagannathan, and Stephen Weeks.
  * Copyright (C) 1997-2000 NEC Research Institute.
  *
@@ -20,9 +20,11 @@ typedef enum {
 static inline bool isPointerMarked (pointer p);
 static inline bool isPointerMarkedByMode (pointer p, GC_markMode m);
 static size_t dfsMarkByMode (GC_state s, pointer root,
-                             GC_markMode mode, bool shouldHashCons);
-static inline void dfsMarkWithHashCons (GC_state s, objptr *opp);
-static inline void dfsMarkWithoutHashCons (GC_state s, objptr *opp);
+                             GC_markMode mode, 
+                             bool shouldHashCons,
+                             bool shouldLinkWeaks);
+static inline void dfsMarkWithHashConsWithLinkWeaks (GC_state s, objptr *opp);
+static inline void dfsMarkWithoutHashConsWithLinkWeaks (GC_state s, objptr *opp);
 static inline void dfsUnmark (GC_state s, objptr *opp);
 
 #endif /* (defined (MLTON_GC_INTERNAL_FUNCS)) */
